# kinova-control-system

./: .gitignore  README.md  example.py  main.py  pyproject.toml  sudo_code.txt
backend/: kinova.py  utilities.py
visualizer/6dof/urdf/: 6dof.urdf  GEN3-LITE.urdf
visualizer/7dof/urdf/: 7dof.urdf  GEN3_URDF_V12.urdf
